<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TetrisGame</string>


    <string name="gameRunning">游戏运行中</string>
    <string name="gameOver">游戏已停止</string>
    <string name="gamePause">游戏已暂停</string>


    <string name="gamePlay">游戏玩法</string>
    <string name="instructions">开发说明</string>
    <string name="Module">模块介绍</string>
    <string name="other">其他</string>


    <string name="deline">消去行数:</string>
    <string name="score">得分:</string>
    <string name="levels">等级：</string>
    <string name="back_tishi">再按一次退出</string>
    <string name="language">中文</string>


    <string name="startgame">开始游戏</string>
    <string name="gameTime">游戏时间:</string>
    <string name="congame">继续游戏</string>
    <string name="newgame">新游戏</string>
    <string name="help">帮助</string>
    <string name="cancel">不想玩了</string>
    <string name="again">再来一次</string>
    <string name="rank">排行榜</string>

    <string name="isOpenBgMusic">是否开启背景音乐</string>
    <string name="isOpenButMusic">是否开启按钮音效</string>
    <string name="setting">设置</string>
    <string name="cancelMusic">取消</string>
    <string name="gameDirections">游戏说明</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget">小部件</string>


</resources>