<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/music_pageback"
    android:paddingTop="30dp"
     >
    <LinearLayout
        android:paddingLeft="10dp"
       android:id="@+id/Linearmusic"
       android:layout_marginTop="80dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
         >
   <CheckBox 
       android:id="@+id/bgmusic"
       style="@style/checkboxchang"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
      
       />
   <TextView 
       android:layout_height="80dp"
       android:layout_width="wrap_content"
       android:textSize="20sp"
       android:textColor="#ff00ff"
       android:text="@string/isOpenBgMusic"
      
       />
    </LinearLayout>
    
      
   <LinearLayout  
       android:id="@+id/Linearmusic2"
       android:layout_below="@+id/Linearmusic"  
        android:paddingLeft="10dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
         >
   <CheckBox 
       android:id="@+id/buttonmusic"
       style="@style/checkboxchang"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       
       />
   <TextView 
       android:layout_height="80dp"
       android:layout_width="wrap_content"
       android:textSize="20sp"
       android:textColor="#ff00ff"
       android:text="@string/isOpenButMusic"
       />
    </LinearLayout>

     <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="10dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >
        <Button 
            android:id="@+id/setting"
            android:background="@drawable/cancelbutton1"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/setting"
            android:layout_weight="1"
            />
         <Button 
            android:id="@+id/cancel"
            android:background="@drawable/cancelbutton1"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
              android:textSize="20sp"
            android:text="@string/cancelMusic"
            android:layout_weight="1"
            />
        
    </LinearLayout>
   

</RelativeLayout>
