<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/tetris">



    <Button
        android:id="@+id/buttonlan"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/language"
        android:background="#0af"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_continue"
        app:layout_constraintTop_toTopOf="parent" />



    <RelativeLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "50dp"
        >
        <Button
            android:id = "@+id/bt_homePage"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "homePage"
            android:layout_centerHorizontal= "true"
            />
    </RelativeLayout>

    <RelativeLayout
         android:layout_width = "match_parent"
         android:layout_height = "wrap_content"
         android:layout_marginTop = "50dp"
        >
       <Button
           android:id = "@+id/bt_continue"
          android:layout_width = "wrap_content"
          android:layout_height = "wrap_content"
          android:text = "@string/congame"
         android:layout_centerHorizontal= "true"
        />
   </RelativeLayout>
  
   <RelativeLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
    >
       <Button
           android:id = "@+id/bt_new"
           android:layout_width = "wrap_content"
           android:layout_height = "wrap_content"
           android:text = "@string/newgame"
           android:layout_centerHorizontal= "true"
           />
  </RelativeLayout>
  
    <RelativeLayout
     android:layout_width = "match_parent"
     android:layout_height = "wrap_content"
   >

        <Button
             android:id = "@+id/bt_help"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/help"
            android:layout_centerHorizontal= "true"
        />
    </RelativeLayout>




    <RelativeLayout
         android:layout_width = "match_parent"
         android:layout_height = "wrap_content"
   >

   <Button
    android:id = "@+id/bt_rank"
    android:layout_width = "wrap_content"
    android:layout_height = "wrap_content"
    android:text = "@string/rank"
    android:layout_centerHorizontal= "true"
   />

    </RelativeLayout>


 <RelativeLayout
 android:layout_width = "match_parent"
 android:layout_height = "wrap_content"
 >
  <TextView
        android:id = "@+id/tv_level"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "选择难度"
        android:textColor = "#ee000000"
        android:layout_centerHorizontal= "true"
  />
  </RelativeLayout>







     <RelativeLayout
          android:layout_width = "match_parent"
          android:layout_height = "wrap_content"
       >


         <TextView
          android:id = "@+id/tv_speed"
          android:layout_width = "wrap_content"
          android:layout_height = "wrap_content"
          android:layout_centerHorizontal = "true"
          android:text = "1"
          android:textSize = "20sp"
          android:textColor = "#ffffff00"
          android:background = "#6600ee00"
      />

     <Button
         android:id = "@+id/bt_pre"
          android:layout_width = "40dp"
         android:layout_height = "wrap_content"
         android:layout_toLeftOf = "@id/tv_speed"
         android:text = "&lt;&lt;"
         android:textSize = "20sp"
        android:background = "#70dfdfdf"
        android:textColorHighlight = "#ffff0000"
        android:layout_marginRight = "10dp"
     />

   <Button
       android:id = "@+id/bt_next"
       android:layout_width = "40dp"
       android:layout_height = "wrap_content"
       android:layout_toRightOf = "@id/tv_speed"
       android:text = ">>"
       android:textSize = "20sp"
       android:background = "#80cfcfcf"
      android:layout_marginLeft = "10dp"
  />

</RelativeLayout>











 <RelativeLayout
         android:layout_width = "match_parent"
       android:layout_height = "wrap_content"
      android:layout_marginTop = "15dp"
 >
  <CheckBox
  android:id = "@+id/cb_voice"
  android:layout_width = "wrap_content"
  android:layout_height = "wrap_content"
  android:checked = "true"
  android:layout_centerHorizontal = "true"
  />
  <TextView
   android:id = "@+id/tv_voice"

      android:layout_width = "wrap_content"
      android:layout_height = "wrap_content"
      android:text = "声音开关:"
      android:textColor = "#ee000000"
       android:layout_toLeftOf = "@id/cb_voice"
  />
  </RelativeLayout>






  <RelativeLayout
 android:layout_width = "fill_parent"
 android:layout_height = "wrap_content"
 android:layout_marginTop = "15dp"
 >
   <Button
       android:id = "@+id/bt_exit"
       android:layout_width = "wrap_content"
       android:layout_height = "wrap_content"
       android:text = "退出"
       android:layout_centerHorizontal= "true"
  />
 </RelativeLayout>

</LinearLayout>
